internal/objectstatus/testdata/endpointslice_nil_ready.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
addressType: IPv4
metadata:
  creationTimestamp: "2019-03-05T17:20:09Z"
  labels:
    project: octant
    kubernetes.io/service-name: stateful
  name: stateful-nilready
  namespace: default
  resourceVersion: "1217600"
  uid: ed736467-3f6a-11e9-91d0-025000000002
endpoints:
  # An omitted ready condition means "unknown", which callers must read as ready
  # to match what v1 Endpoints reported in Subsets.Addresses.
  - addresses:
      - 10.1.85.145
    conditions: {}
    nodeName: docker-desktop
    targetRef:
      kind: Pod
      name: web-0
      namespace: default
      uid: ed85e9f9-3f6a-11e9-91d0-025000000001
ports:
  - name: web
    port: 80
    protocol: TCP
