internal/objectstatus/testdata/endpointslice_no_endpoints.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
addressType: IPv4
metadata:
  creationTimestamp: "2019-03-05T17:20:09Z"
  labels:
    project: octant
    kubernetes.io/service-name: stateful
  name: stateful-abcde
  namespace: default
  resourceVersion: "1217600"
  uid: ed736467-3f6a-11e9-91d0-025000000001
