internal/objectstatus/testdata/endpointslice_ok.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
addressType: IPv4
metadata:
  creationTimestamp: "2019-03-05T17:20:09Z"
  labels:
    project: octant
    kubernetes.io/service-name: stateful
  name: stateful-abcde
  namespace: default
  resourceVersion: "1217600"
  uid: ed736467-3f6a-11e9-91d0-025000000001
endpoints:
  - addresses:
      - 10.1.85.145
    conditions:
      ready: true
    nodeName: docker-desktop
    targetRef:
      kind: Pod
      name: web-0
      namespace: default
      resourceVersion: "1217525"
      uid: ed85e9f9-3f6a-11e9-91d0-025000000001
  - addresses:
      - 10.1.85.146
    conditions:
      ready: true
    nodeName: docker-desktop
    targetRef:
      kind: Pod
      name: web-1
      namespace: default
      resourceVersion: "1217563"
      uid: eee6801a-3f6a-11e9-91d0-025000000001
  - addresses:
      - 10.1.85.147
    conditions:
      ready: true
    nodeName: docker-desktop
    targetRef:
      kind: Pod
      name: web-2
      namespace: default
      resourceVersion: "1217599"
      uid: f02232bc-3f6a-11e9-91d0-025000000001
ports:
  - name: web
    port: 80
    protocol: TCP
