internal/objectstatus/testdata/ingress_mismatched_tls_host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-bad-tls-host
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    tls:
    - hosts:
      - sslexample.foo.com
      secretName: testsecret-tls
    rules:
    - host: not-the-tls-host.com
      http:
        paths:
        - path: /testpath
          backend:
            service:
              name: my-service
              port:
                name: grpc
