internal/objectstatus/testdata/ingress_multiple_port_service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: multiple-port-service-ingress
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: multiple-port-service
      port:
        number: 80
