internal/objectstatus/testdata/ingress_no_matching_port.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-bad-port
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
    - http:
        paths:
        - path: /testpath
          backend:
            service:
              name: service-wrong-port
              port:
                number: 80
