internal/objectstatus/testdata/ingress_single_service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: single-service-ingress
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: single-service
      port:
        number: 80
