internal/objectstatus/testdata/ingress_wildcard_tls_host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-bad-tls-host
  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - "*.foo.com"
      secretName: testsecret-tls
  rules:
    - host: www.foo.com
      http:
        paths:
          - path: /testpath
            backend:
              service:
                name: my-service
                port:
                  name: grpc
