internal/objectstatus/testdata/service_single_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: single-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
